# nd-wfc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: nd-wfc-config.cmake.in
demos/2DDungeon/: CMakeLists.txt  Makefile  main.cpp
demos/sudoku/: CMakeLists.txt  Makefile  README.md  benchmark_sudoku.cpp  build.sh  sudoku.cpp  sudoku.h  sudoku_wfc.cpp  test_sudoku.cpp
include/nd-wfc/: wfc.h  wfc.hpp  wfc_adjacency_matrix.hpp  wfc_allocator.hpp  wfc_bit_container.hpp  wfc_builder.hpp  wfc_callbacks.hpp  wfc_constrainer.hpp  wfc_large_integers.hpp  wfc_queue.hpp  wfc_random.hpp  wfc_utils.hpp  wfc_variable_map.hpp  wfc_wave.hpp  wfc_weights.hpp  worlds.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_allocator.cpp  test_main.cpp
